--- a/Review/Review.vcxproj.filters
+++ b/Review/Review.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="05-2.c">
+    <ClCompile Include="clacuration.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
