0628 피라미드 1차 시도

--- a/Review Study C/Review Study C2/Review Study C2.vcxproj
+++ b/Review Study C/Review Study C2/Review Study C2.vcxproj
@@ -19,8 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="06-1.cpp" />
-    <ClCompile Include="06-2.c" />
+    <ClCompile Include="피라미드.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
